Fixed button CTA jump at different screen widths.

--- a/app/assets/stylesheets/pages/_contact.scss
+++ b/app/assets/stylesheets/pages/_contact.scss
@@ -125,7 +125,7 @@
   position: absolute;
   bottom: 0px;
   right: 0px;
-  z-index: 100;
+  z-index: 10;
   height: 8vh;
   border-radius: 15px 0px;
 }
